app/global.css
/* ... */
.hero-content {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: center;
}

.hero-text {
	margin-left: 10%;
}

.hero-title {
	margin-top: 20%;
	text-align: left;
}

.hero-swappable-line {
	display: flex;
	align-items: centre;
	/* justify-content: center; */
}

.hero-h2,
.hero-swappable {
	margin: 0 10px;
	white-space: nowrap;
	font-size: 48px;
	font-weight: 900;
}

.hero-swappable-1 {
	background-image: linear-gradient(to bottom, #ff8e90, #ffa95c);
	background-clip: text;
	color: transparent;
}
.hero-swappable-2 {
	background-image: linear-gradient(to bottom, #9efd69, #12e9f1);
	background-clip: text;
	color: transparent;
}
.hero-swappable-3 {
	background-image: linear-gradient(to bottom, #bf7fea, #ff8e90);
	background-clip: text;
	color: transparent;
}

.hero-h1 {
	font-size: 80px;
	font-weight: 900;
	color: #ffffff;
	line-height: 90px;
	margin-bottom: 16px;
	margin-top: -8px;
	text-align: left;
}

.hero-h3 {
	font-size: 20px;
	font-weight: 900;
	color: #ffffff;
	line-height: 20px;
	text-align: left;
	margin-bottom: 24px;
	margin-left: 6px;
}

.hero-gradient-text {
	background-image: linear-gradient(to right, #12e9f1, #bf7fea);
	background-clip: text;
	color: transparent;
	margin-left: 20px;
}

@keyframes rotateWords {
	0% {
		opacity: 0;
		transform: translateY(-70%);
	}

	7%,
	24% {
		opacity: 1;
		transform: translateY(0);
	}

	43%,
	100% {
		opacity: 0;
		transform: translateY(70%);
	}
}
ul {
	position: relative;
	width: 100%; /* Set the width of the parent ul */
	height: 64px; /* Set the height of the parent ul */
	overflow: hidden; /* Hide overflow to prevent stacking */
}

li {
	position: absolute; /* Use absolute positioning */
	top: 0;
	animation: rotateWords 9s ease-in-out infinite backwards;

	white-space: nowrap;

	&:nth-child(2) {
		animation-delay: 3s;
	}
	&:nth-child(3) {
		animation-delay: 6s;
	}
}

.hero-button {
}

.council-model-container {
	display: flex;
	justify-content: flex-end;
	align-self: flex-end;
	max-height: calc(100vh - 53vh);
	overflow: hidden;
	width: 100%;
	margin: 0px;
	padding: 0px;
}
/* Login Page */

.usage-landingpage {
	background-color: #21234b;
}

.usage-container {
	padding: 64px 128px;
}

.usage-container h1 {
	color: #f2f6ff;
	font-size: 16px;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
}

.usage-container p {
	padding-top: 16px;
	color: #fff;
	font-size: 16px;
	font-style: normal;
	font-weight: 400;
	line-height: 20px;
}

/* Horizontal Scrollers */
.quote {
	font-size: 20px;
	font-style: normal;
	font-weight: 400;
	line-height: 28px;
	color: white;
	display: inline-block;
	padding-left: 16px;
}

@keyframes slide {
	from {
		transform: translateX(0);
	}
	to {
		transform: translateX(-100%);
	}
}

.scroller {
	overflow: hidden;
	padding: 24px 0;
	/* background: white; */
	white-space: nowrap;
	position: relative;

	border-top: 2px solid var(--Blue-Gradient, #12e9f1);
	border-bottom: 2px solid var(--Blue-Gradient, #12e9f1);
	background: var(--Dark-Background-Color, #000822);
}

.upper-scroller {
	/* margin-bottom: 50px; */
}

.scroller:before,
.scroller:after {
	position: absolute;
	top: 0;
	width: 250px;
	height: 100%;
	content: "";
	z-index: 2;
}

.scroller:hover .quotes-scroller {
	animation-play-state: paused;
}

.quotes-scroller {
	display: inline-block;
	animation: 20s slide infinite linear;
}

/* ABOUT THE COUNCIL */
.about-council-component {
	background-color: #21234b;
	padding-bottom: 100px;
}

.about-council-content {
	background: url("/img/choose-council.png") top right no-repeat;
}

.about-council-div {
	padding-top: 100px;
	margin-left: 10%;
	margin-bottom: 48px;
}

.how-it-works-div {
	display: flex;
	justify-content: space-between;
	margin-right: 10%;
	margin-bottom: 48px;
	/* align-items: center;  */
}
.image-container {
	position: relative;
	width: 100%;
	margin-top: 24px;
}

.image-container img {
	width: 100%;
	height: auto;
	display: block;
}

.how-we-started-content {
	width: 100%;
	margin-right: 10%;
}

.how-we-started-div {
	display: flex;
	justify-content: flex-start;
	margin-left: 10%;
	margin-right: 10%;
}

.watch-demo-button {
	margin: 0px;
}

.about-council-h2 {
	font-size: 48px;
	font-weight: 900;
	margin-bottom: 24px;
}

.about-council-p2 {
	margin-top: 5%;
}

.about-council-p3 {
	/* width: 70%; */
	font-size: 20px;
	margin-bottom: 20px;
}

.about-council-p1,
.about-council-p2 {
	width: 40%;
	font-size: 20px;
}

.team-landingpage {
	background-color: #111637;
}

.team-container {
	padding: 100px 118px 100px 118px;
}

.team-gradient-text {
	background-image: linear-gradient(to right, #12e9f1, #bf7fea);
	background-clip: text;
	color: transparent;
	margin-left: 2px;
}

.team-member-card {
	border-radius: 16px;
	background: var(--Background-Color, #21234b);
	backdrop-filter: blur(2px);
	display: flex;
	padding: 20px;
	flex-direction: column;
	align-items: center;
	flex: 1 0 0;
	margin-left: 10px;
	margin-right: 10px;
}

.team-member-card:first-child {
	margin-left: 0px;
}

.team-member-card:last-child {
	margin-right: 0px;
}

.team-picture-container {
	position: relative;
	width: 150px;
	height: 150px;
}

.team-picture {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	transition: opacity 0.3s ease-in-out;
}

.team-picture-human {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	opacity: 0;
	transition: opacity 0.3s ease-in-out;
}

.team-member-card:hover .team-picture {
	opacity: 0;
}

.team-member-card:hover .team-picture-human {
	opacity: 1;
}

.team-header {
	color: #f2f6ff;
	font-size: 48px;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
}

.team-text {
  color: #FFF;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 28px; /* 140% */
}
/* ... */

